# Cpp-Option-Pricing

./: .clang-format  .gitignore  BlackScholesFormulas.cpp  BlackScholesFormulas.h  CMakeLists.txt  ClassDiagram.puml  DiscountCurve.cpp  DiscountCurve.h  FinancialInstrument.cpp  FinancialInstrument.h  FinancialPayoffs.cpp  FinancialPayoffs.h  InterpolationSchemes.cpp  InterpolationSchemes.h  MANIFEST.in  Model.cpp  Model.h  Model.hpp  MonteCarloPricer.h  PathSimulator.cpp  PathSimulator.h  PathSimulator2D.cpp  PathSimulator2D.h  Pricer.cpp  Pricer.h  README.md  SMART_POINTERS_GUIDE.md  Smart_Pointers.h  Utils.cpp  Utils.h  VolatilitySurface.cpp  VolatilitySurface.h  main.cpp  pyproject.toml
.github/workflows/: build.yml
PDEs/: BoundaryConditions.cpp  Grid.cpp  Grid.h  PDE.cpp  PDE.h  PDEGreeksCalculator.cpp  PDEGreeksCalculator.h  Solver.cpp  Solver.h
build_qfb/: CppFM  test_bessel_function  test_black_scholes  test_cos_method  test_dupire  test_dupire_pricer  test_greeks  test_heston_model  test_heston_scheme  test_heston_slv  test_integration  test_interpolation  test_newton_methods  test_pde_greeks  test_pde_grid  test_pde_solver  test_pde_stability  test_tridiagonal_solver  test_volatility_surface_construction
cmake/: cppfmConfig.cmake.in
docs/: HESTON_SLV_INVESTIGATION.md  ONBOARDING.md  OPTIMIZATION.md  PYTHON_API.md
include/cppfm/calibration/: HestonCalibration.h  ImpliedVolSolver.h  LinearAlgebra.h  Optimizer.h
include/cppfm/cos/: COS.h
include/cppfm/market/: FinancialInstrument.h  HestonLocalVol.h  SVICalibration.h  SviCalibration.h  VolatilitySurface.h
include/cppfm/models/: Model.h
include/cppfm/montecarlo/: MonteCarlo.h  RandomNumberGenerator.h  VarianceReduction.h
include/cppfm/optimization/: LinearAlgebra.h  Optimizer.h
include/cppfm/pde/: BoundaryConditions.h  PDEGreeksCalculator.h  Solver.h
include/cppfm/pricers/: BlackScholesFormulas.h  COSPricer.h  Pricer.h
include/cppfm/simulators/: PathSimulator.h  PathSimulator2D.h
include/cppfm/utils/: InterpolationSchemes.h  Utils.h
python/: CMakeLists.txt  bindings.cpp  pyproject.toml
python/cppfm/: __init__.py
python/examples/: MLMC.ipynb  heston_slv_hedging.ipynb  heston_slv_plot.ipynb  heston_slv_svi.ipynb
src/bindings/: bind_calibration.cpp  bind_market.cpp  bind_models.cpp  bind_pricers.cpp  bind_simulators.cpp  bindings_common.h  module_main.cpp
src/calibration/: HestonCalibration.cpp  ImpliedVolSolver.cpp  LinearAlgebra.cpp  Optimizer.cpp
src/cos/: COS.cpp
src/market/: DiscountCurve.cpp  FinancialInstrument.cpp  HestonLocalVol.cpp  SVICalibration.cpp  SviCalibration.cpp  VolatilitySurface.cpp
src/models/: Model.cpp
src/montecarlo/: MonteCarlo.cpp  RandomNumberGenerator.cpp  VarianceReduction.cpp
src/optimization/: LinearAlgebra.cpp  Optimizer.cpp
src/pde/: BoundaryConditions.cpp  Grid.cpp  PDE.cpp  PDEGreeksCalculator.cpp  Solver.cpp
src/pricers/: BlackScholesFormulas.cpp  COSPricer.cpp  Pricer.cpp
src/simulators/: PathSimulator.cpp  PathSimulator2D.cpp
src/utils/: InterpolationSchemes.cpp  Utils.cpp
tests/: bessel_test_data.csv  test_N_sweep.cpp  test_bessel_data.py  test_bessel_function.cpp  test_black_scholes.cpp  test_cos_method.cpp  test_dupire.cpp  test_dupire_pricer.cpp  test_greeks.cpp  test_heston_calibration.cpp  test_heston_model.cpp  test_heston_scheme.cpp  test_heston_slv.cpp  test_integration.cpp  test_interpolation.cpp  test_linear_algebra.cpp  test_mc_parallelization.cpp  test_newton_methods.cpp  test_optimizer.cpp  test_pde_greeks.cpp  test_pde_grid.cpp  test_pde_solver.cpp  test_pde_stability.cpp  test_svi_calibration.cpp  test_tridiagonal_solver.cpp  test_utils.h  test_volatility_surface_construction.cpp  validate_heston_slv.cpp
