[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "cppfm"
version = "0.1.0"
description = "Quantitative Finance Library"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["cppfm"]

[tool.setuptools.package-data]
cppfm = ["*.so", "*.dylib", "*.pyd"]
